Move os-apply-config templates into a directory
This patch moves all of the os-apply-config (tripleo-image-elements)
specific templates into a common directory. This matches what
we do for puppet and should help new users more easily
understand the project layout.

Change-Id: I7dce2a770d56795f3ea22c8a464595c4a0c60832

--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -1,23 +1,23 @@
 resource_registry:
-  OS::TripleO::BlockStorage: cinder-storage.yaml
+  OS::TripleO::BlockStorage: os-apply-config/cinder-storage.yaml
   OS::TripleO::BlockStorage::Net::SoftwareConfig: net-config-noop.yaml
-  OS::TripleO::Compute: compute.yaml
+  OS::TripleO::Compute: os-apply-config/compute.yaml
   OS::TripleO::Compute::Net::SoftwareConfig: net-config-noop.yaml
   OS::TripleO::SoftwareDeployment: OS::Heat::StructuredDeployment
-  OS::TripleO::Controller: controller.yaml
+  OS::TripleO::Controller: os-apply-config/controller.yaml
   OS::TripleO::Controller::Net::SoftwareConfig: net-config-noop.yaml
-  OS::TripleO::ObjectStorage: swift-storage.yaml
+  OS::TripleO::ObjectStorage: os-apply-config/swift-storage.yaml
   OS::TripleO::ObjectStorage::Net::SoftwareConfig: net-config-noop.yaml
-  OS::TripleO::CephStorage: ceph-storage.yaml
+  OS::TripleO::CephStorage: os-apply-config/ceph-storage.yaml
   OS::TripleO::CephStorage::Net::SoftwareConfig: net-config-noop.yaml
-  OS::TripleO::ControllerPostDeployment: controller-post.yaml
-  OS::TripleO::ComputePostDeployment: compute-post.yaml
-  OS::TripleO::ObjectStoragePostDeployment: swift-storage-post.yaml
-  OS::TripleO::BlockStoragePostDeployment: cinder-storage-post.yaml
-  OS::TripleO::CephStoragePostDeployment: ceph-storage-post.yaml
-  OS::TripleO::SwiftDevicesAndProxy::SoftwareConfig: swift-devices-and-proxy-config.yaml
-  OS::TripleO::CephClusterConfig::SoftwareConfig: ceph-cluster-config.yaml
-  OS::TripleO::AllNodes::SoftwareConfig: all-nodes-config.yaml
+  OS::TripleO::ControllerPostDeployment: os-apply-config/controller-post.yaml
+  OS::TripleO::ComputePostDeployment: os-apply-config/compute-post.yaml
+  OS::TripleO::ObjectStoragePostDeployment: os-apply-config/swift-storage-post.yaml
+  OS::TripleO::BlockStoragePostDeployment: os-apply-config/cinder-storage-post.yaml
+  OS::TripleO::CephStoragePostDeployment: os-apply-config/ceph-storage-post.yaml
+  OS::TripleO::SwiftDevicesAndProxy::SoftwareConfig: os-apply-config/swift-devices-and-proxy-config.yaml
+  OS::TripleO::CephClusterConfig::SoftwareConfig: os-apply-config/ceph-cluster-config.yaml
+  OS::TripleO::AllNodes::SoftwareConfig: os-apply-config/all-nodes-config.yaml
   OS::TripleO::BootstrapNode::SoftwareConfig: bootstrap-config.yaml
   OS::TripleO::NodeUserData: firstboot/userdata_default.yaml
   OS::TripleO::NodeExtraConfigPost: extraconfig/post_deploy/default.yaml
@@ -31,7 +31,7 @@ resource_registry:
 
   # TripleO overcloud networks
   OS::TripleO::Network: network/networks.yaml
-  OS::TripleO::VipConfig: vip-config.yaml
+  OS::TripleO::VipConfig: os-apply-config/vip-config.yaml
 
   OS::TripleO::Network::External: network/noop.yaml
   OS::TripleO::Network::InternalApi: network/noop.yaml
@@ -73,4 +73,4 @@ resource_registry:
   OS::TripleO::Controller::Ports::RedisVipPort: network/ports/noop.yaml
 
   # validation resources
-  OS::TripleO::AllNodes::Validation: all-nodes-validation.yaml
+  OS::TripleO::AllNodes::Validation: os-apply-config/all-nodes-validation.yaml
