--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = tripleo-heat-templates
 summary = Heat templates for deploying OpenStack with OpenStack.
 description-file =
-    README.md
+    README.rst
 author = OpenStack
 author_email = openstack-dev@lists.openstack.org
 license = Apache License (2.0)
