--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -458,15 +458,10 @@ parameters:
     default: ''
     description: If set, the contents of an SSL certificate authority file.
     type: string
-  SSLCertificate:
-    default: ''
-    description: If set, the contents of an SSL certificate .crt file for encrypting SSL endpoints.
+  SSLCertificatePath:
+    description: The filepath of the certificate as it will be stored in the controller.
     type: string
-    hidden: true
-  SSLKey:
     default: ''
-    description: If set, the contents of an SSL certificate .key file for encrypting SSL endpoints.
-    type: string
     hidden: true
   SwiftHashSuffix:
     default: unset
@@ -557,6 +552,8 @@ resources:
     properties:
       parts:
       - config: {get_resource: NodeAdminUserData}
+        type: multipart
+      - config: {get_resource: NodeSSLData}
         type: multipart
       - config: {get_resource: NodeUserData}
         type: multipart
@@ -1196,6 +1193,7 @@ resources:
                 public_virtual_interface: {get_input: public_virtual_interface}
                 tripleo::loadbalancer::control_virtual_interface: {get_input: control_virtual_interface}
                 tripleo::loadbalancer::public_virtual_interface: {get_input: public_virtual_interface}
+                tripleo::loadbalancer::service_certificate: {get_param: SSLCertificatePath}
                 tripleo::packages::enable_install: {get_input: enable_package_install}
                 tripleo::packages::enable_upgrade: {get_input: enable_package_upgrade}
 
