--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -14,6 +14,9 @@ parameters:
     description: The keystone auth secret and db password.
     type: string
     hidden: true
+  CeilometerApiVirtualIP:
+    type: string
+    default: ''
   CeilometerBackend:
     default: 'mongodb'
     description: The ceilometer backend type.
@@ -28,6 +31,9 @@ parameters:
     description: The password for the ceilometer service  and db account.
     type: string
     hidden: true
+  CinderApiVirtualIP:
+    type: string
+    default: ''
   CinderEnableNfsBackend:
     default: false
     description: Whether to enable or not the NFS backend for Cinder
@@ -399,6 +405,9 @@ parameters:
         of VXLAN VNI IDs that are available for tenant network allocation
     default: ["1:1000", ]
     type: comma_delimited_list
+  NovaApiVirtualIP:
+    type: string
+    default: ''
   NovaPassword:
     default: unset
     description: The password for the nova service and db account, used by nova-api.
@@ -496,6 +505,9 @@ parameters:
       services.
     hidden: true
     type: string
+  SwiftProxyVirtualIP:
+    type: string
+    default: ''
   SwiftReplicas:
     type: number
     default: 3
