Update overcloud template description and Count constraints
Currently there's a vague list of services in the description, so instead
describe the roles supported for deployment, and encode the minimum allowed
of one Controller/Compute with zero Storage nodes in the parameter constraints.

Change-Id: Ib4917843f3e4770f0260db72719ed6af0ee8dc13
(cherry picked from commit 8585f8d3fe57780d2c6426f27406de373972cc25)

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -1,8 +1,10 @@
 heat_template_version: 2015-04-30
 
 description: >
-  Nova API,Keystone,Heat Engine and API,Glance,Neutron,Dedicated MySQL
-  server,Dedicated RabbitMQ Server,Group of Nova Computes
+  Deploy an OpenStack environment, consisting of several node types (roles),
+  Controller, Compute, BlockStorage, SwiftStorage and CephStorage.  The Storage
+  roles enable independent scaling of the storage components, but the minimal
+  deployment is one Controller and one Compute node.
 
 
 # TODO(shadower): we should probably use the parameter groups to put
@@ -315,6 +317,8 @@ parameters:
   ControllerCount:
     type: number
     default: 1
+    constraints:
+      - range: {min: 1}
   controllerExtraConfig:
     default: {}
     description: |
