Allow a user to specify a comma separated list of ntp servers
This commits aims to allow a user to specify several ntp servers and not
just one.

Example:

openstack overcloud deploy --templates --ntp-server
0.centos.pool.org,1.centos.pool.org

Change-Id: I4925ef1cf1e565d789981e609c88a07b6e9b28de

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -221,8 +221,9 @@ parameters:
     type: string
     hidden: true
   NtpServer:
-    type: string
     default: ''
+    description: Comma-separated list of ntp servers
+    type: comma_delimited_list
   MongoDbNoJournal:
     default: false
     description: Should MongoDb journaling be disabled
