--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -421,8 +421,9 @@ parameters:
     description: Should MongoDb journaling be disabled
     type: boolean
   NtpServer:
-    type: string
     default: ''
+    description: Comma-separated list of ntp servers
+    type: comma_delimited_list
   PcsdPassword:
     type: string
     description: The password for the 'pcsd' user.
@@ -910,11 +911,7 @@ resources:
             template: "'LIMIT'"
             params:
               LIMIT: {get_param: RabbitFDLimit}
-        ntp_servers:
-          str_replace:
-            template: '["server"]'
-            params:
-              server: {get_param: NtpServer}
+        ntp_servers: {get_param: NtpServer}
         control_virtual_interface: {get_param: ControlVirtualInterface}
         public_virtual_interface: {get_param: PublicVirtualInterface}
         swift_hash_suffix: {get_param: SwiftHashSuffix}
