--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -83,8 +83,9 @@ parameters:
     type: string
     hidden: true
   NtpServer:
-    type: string
     default: ''
+    description: Comma-separated list of ntp servers
+    type: comma_delimited_list
   EnablePackageInstall:
     default: 'false'
     description: Set to true to enable package installation via Puppet
@@ -212,11 +213,7 @@ resources:
         rabbit_password: {get_param: RabbitPassword}
         rabbit_client_use_ssl: {get_param: RabbitClientUseSSL}
         rabbit_client_port: {get_param: RabbitClientPort}
-        ntp_servers:
-          str_replace:
-            template: '["server"]'
-            params:
-              server: {get_param: NtpServer}
+        ntp_servers: {get_param: NtpServer}
         enable_package_install: {get_param: EnablePackageInstall}
         enable_package_upgrade: {get_attr: [UpdateDeployment, update_managed_packages]}
 
