Allow a user to specify a comma separated list of ntp servers
This commits aims to allow a user to specify several ntp servers and not
just one.

Example:

openstack overcloud deploy --templates --ntp-server
0.centos.pool.org,1.centos.pool.org

Change-Id: I4925ef1cf1e565d789981e609c88a07b6e9b28de
(cherry picked from commit 16093c3932545b1a8d1f4572c98d6953c277b3d5)

--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -22,8 +22,9 @@ parameters:
     constraints:
       - custom_constraint: nova.keypair
   NtpServer:
-    type: string
     default: ''
+    description: Comma-separated list of ntp servers
+    type: comma_delimited_list
   EnablePackageInstall:
     default: 'false'
     description: Set to true to enable package installation via Puppet
@@ -141,11 +142,7 @@ resources:
       config: {get_resource: CephStorageConfig}
       server: {get_resource: CephStorage}
       input_values:
-        ntp_servers:
-          str_replace:
-            template: '["server"]'
-            params:
-              server: {get_param: NtpServer}
+        ntp_servers: {get_param: NtpServer}
         enable_package_install: {get_param: EnablePackageInstall}
         enable_package_upgrade: {get_attr: [UpdateDeployment, update_managed_packages]}
         ceph_cluster_network: {get_attr: [NetIpSubnetMap, net_ip_subnet_map, {get_param: [ServiceNetMap, CephClusterNetwork]}]}
