--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -228,8 +228,9 @@ parameters:
     description: The full class name of the security API class
     type: string
   NtpServer:
-    type: string
     default: ''
+    description: Comma-separated list of ntp servers
+    type: comma_delimited_list
   RabbitHost:
     type: string
     default: ''  # Has to be here because of the ignored empty value bug
@@ -556,11 +557,7 @@ resources:
         rabbit_password: {get_param: RabbitPassword}
         rabbit_client_use_ssl: {get_param: RabbitClientUseSSL}
         rabbit_client_port: {get_param: RabbitClientPort}
-        ntp_servers:
-          str_replace:
-            template: '["server"]'
-            params:
-              server: {get_param: NtpServer}
+        ntp_servers: {get_param: NtpServer}
         enable_package_install: {get_param: EnablePackageInstall}
         enable_package_upgrade: {get_attr: [UpdateDeployment, update_managed_packages]}
 
