Allow ctlplane network or ID, and default to "ctlplane"
Currently you always have to pass the ctlplane ID because we're still
using the deprecated network_id property for the neutron port resource.

Since Juno, heat has supported a "network" property, which is used
elsewhere, e.g the nested port stacks, so switch to using it in the
overcloud-without-mergepy template, and flip the default to a more
useful "ctlplane" vs an empty string.

This means the stack create should just work on commonly documented
deployments without requiring any parameter.

Change-Id: Ifcea36d26b795c5e8b80accd8112e23b254127be

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -120,9 +120,9 @@ parameters:
     type: string
     default: "datacentre:br-ex"
   NeutronControlPlaneID:
-    default: ''
+    default: 'ctlplane'
     type: string
-    description: Neutron ID for ctlplane network.
+    description: Neutron ID or name for ctlplane network.
   NeutronEnableTunnelling:
     type: string
     default: "True"
@@ -1107,7 +1107,7 @@ resources:
     depends_on: Networks
     properties:
       name: control_virtual_ip
-      network_id: {get_param: NeutronControlPlaneID}
+      network: {get_param: NeutronControlPlaneID}
       fixed_ips: {get_param: ControlFixedIPs}
       replacement_policy: AUTO
 
