--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -110,9 +110,9 @@ parameters:
     type: string
     default: "datacentre:br-ex"
   NeutronControlPlaneID:
-    default: ''
+    default: 'ctlplane'
     type: string
-    description: Neutron ID for ctlplane network.
+    description: Neutron ID or name for ctlplane network.
   NeutronEnableTunnelling:
     type: string
     default: "True"
@@ -1100,7 +1100,7 @@ resources:
     depends_on: Networks
     properties:
       name: control_virtual_ip
-      network_id: {get_param: NeutronControlPlaneID}
+      network: {get_param: NeutronControlPlaneID}
       fixed_ips: {get_param: ControlFixedIPs}
       replacement_policy: AUTO
 
