Align some defaults with with ControllerCount default
NeutronDhcpAgentsPerNetwork is normally correlated with the
number of controllers, so given that the template
defaults the ControllerCount to 1, 1 seems like a more consistent
value for NeutronDhcpAgentsPerNetwork, and it's consistent with
what we test in CI.

Also NeutronL3HA defaults to False, which is consistent with the default
ControllerCount of 1, but NeutronAllowL3AgentFailover defaults to
True, which I assume makes no sense if there's only 1 controller
and no HA

Change-Id: I4612060979d1e4381800f30e359f58aeef61b861

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -214,7 +214,7 @@ parameters:
         values, use a comma separated string, like so: 'openvswitch,l2_population'
     type: string
   NeutronAllowL3AgentFailover:
-    default: 'True'
+    default: 'False'
     description: Allow automatic l3-agent failover
     type: string
   NeutronL3HA:
@@ -223,7 +223,7 @@ parameters:
     type: string
   NeutronDhcpAgentsPerNetwork:
     type: number
-    default: 3
+    default: 1
     description: The number of neutron dhcp agents to schedule per network
   NovaPassword:
     default: unset
