--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -215,7 +215,7 @@ parameters:
         values, use a comma separated string, like so: 'openvswitch,l2_population'
     type: string
   NeutronAllowL3AgentFailover:
-    default: 'True'
+    default: 'False'
     description: Allow automatic l3-agent failover
     type: string
   NeutronL3HA:
@@ -224,7 +224,7 @@ parameters:
     type: string
   NeutronDhcpAgentsPerNetwork:
     type: number
-    default: 3
+    default: 1
     description: The number of neutron dhcp agents to schedule per network
   NovaPassword:
     default: unset
