--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -505,6 +505,9 @@ parameters:
   GlanceApiVirtualIP:
     type: string
     default: ''
+  GlanceRegistryVirtualIP:
+    type: string
+    default: ''
   MysqlVirtualIP:
     type: string
     default: ''
@@ -903,6 +906,7 @@ resources:
               - {get_param: GlanceApiVirtualIP}
               - ':'
               - {get_param: GlancePort}
+        glance_registry_host: {get_param: GlanceRegistryVirtualIP}
         heat_api_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, HeatApiNetwork]}]}
         keystone_public_api_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, KeystonePublicApiNetwork]}]}
         keystone_admin_api_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, KeystoneAdminApiNetwork]}]}
@@ -1021,7 +1025,7 @@ resources:
                 glance::api::bind_host: {get_input: glance_api_network}
                 glance::api::auth_uri: {get_input: keystone_auth_uri}
                 glance::api::identity_uri: {get_input: keystone_identity_uri}
-                glance::api::registry_host: {get_input: glance_registry_network}
+                glance::api::registry_host: {get_input: glance_registry_host}
                 glance::api::keystone_password: {get_input: glance_password}
                 glance::api::debug: {get_input: debug}
                 glance_notifier_strategy: {get_input: glance_notifier_strategy}
@@ -1030,7 +1034,7 @@ resources:
                 glance::api::database_connection: {get_input: glance_dsn}
                 glance::registry::keystone_password: {get_input: glance_password}
                 glance::registry::database_connection: {get_input: glance_dsn}
-                glance::registry::bind_host: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, GlanceRegistryNetwork]}]}
+                glance::registry::bind_host: {get_input: glance_registry_network}
                 glance::registry::auth_uri: {get_input: keystone_auth_uri}
                 glance::registry::identity_uri: {get_input: keystone_identity_uri}
                 glance::registry::debug: {get_input: debug}
