Remove forced rabbitmq::file_limit conversion to string
Combined with a fix in puppetlabs-rabbitmq, we can lift the forced
conversion of rabbitmq::file_limit into a string in Hiera. See the
referenced puppetlabs-rabbitmq pull request for explanation of the
issue.

Change-Id: I0ec720b5e06763e86ea93f59cfe05842b3d13269
Depends-On: https://github.com/puppetlabs/puppetlabs-rabbitmq/pull/401

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1190,16 +1190,9 @@ resources:
         rabbit_client_use_ssl: {get_param: RabbitClientUseSSL}
         rabbit_client_port: {get_param: RabbitClientPort}
         rabbit_ipv6: {get_param: RabbitIPv6}
+        rabbit_fd_limit: {get_param: RabbitFDLimit}
         mongodb_no_journal: {get_param: MongoDbNoJournal}
         mongodb_ipv6: {get_param: MongoDbIPv6}
-        # We need to force this into quotes or hiera will return integer causing
-        # the puppet module validation regexp to fail.
-        # Remove when: https://github.com/puppetlabs/puppetlabs-rabbitmq/pull/401
-        rabbit_fd_limit:
-          str_replace:
-            template: "'LIMIT'"
-            params:
-              LIMIT: {get_param: RabbitFDLimit}
         ntp_servers: {get_param: NtpServer}
         timezone: {get_param: TimeZone}
         control_virtual_interface: {get_param: ControlVirtualInterface}
