Set shared secrets, keys and passwords as hidden
Change-Id: Ieb27729c6b33ffc849d07200ec0d42508214956e
Closes-Bug: #1399793

--- a/os-apply-config/ceph-storage.yaml
+++ b/os-apply-config/ceph-storage.yaml
@@ -20,10 +20,12 @@ parameters:
     default: ''
     description: The Ceph monitors key. Can be created with ceph-authtool --gen-print-key.
     type: string
+    hidden: true
   CephAdminKey:
     default: ''
     description: The Ceph admin client key. Can be created with ceph-authtool --gen-print-key.
     type: string
+    hidden: true
   CephMonitors:
     default: ''
     description: The list of ip/names to use as Ceph monitors
