--- a/os-apply-config/cinder-storage.yaml
+++ b/os-apply-config/cinder-storage.yaml
@@ -87,6 +87,7 @@ parameters:
   RabbitPassword:
     default: 'guest'
     type: string
+    hidden: true
   RabbitUserName:
     default: 'guest'
     type: string
