--- a/os-apply-config/controller.yaml
+++ b/os-apply-config/controller.yaml
@@ -215,9 +215,11 @@ parameters:
   HeatAuthEncryptionKey:
     description: Auth encryption key for heat-engine
     type: string
+    hidden: true
   HorizonSecret:
     description: Secret key for Django
     type: string
+    hidden: true
   Image:
     type: string
     default: overcloud-control
@@ -317,6 +319,7 @@ parameters:
     default: 'unset'
     description: Shared secret to prevent spoofing
     type: string
+    hidden: true
   NeutronCorePlugin:
     default: 'ml2'
     description: |
@@ -434,6 +437,7 @@ parameters:
   PcsdPassword:
     type: string
     description: The password for the 'pcsd' user.
+    hidden: true
   PublicVirtualInterface:
     default: 'br-ex'
     description: >
