--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -38,10 +38,12 @@ parameters:
     default: ''
     description: The Ceph monitors key. Can be created with ceph-authtool --gen-print-key.
     type: string
+    hidden: true
   CephAdminKey:
     default: ''
     description: The Ceph admin client key. Can be created with ceph-authtool --gen-print-key.
     type: string
+    hidden: true
   CinderEnableNfsBackend:
     default: false
     description: Whether to enable or not the NFS backend for Cinder
@@ -50,6 +52,7 @@ parameters:
     default: ''
     description: The Ceph client key. Can be created with ceph-authtool --gen-print-key. Currently only used for external Ceph deployments to create the openstack user keyring.
     type: string
+    hidden: true
   CephExternalMonHost:
     default: ''
     type: string
@@ -158,6 +161,7 @@ parameters:
     default: 'unset'
     description: Shared secret to prevent spoofing
     type: string
+    hidden: true
   NeutronTunnelTypes:
     default: 'vxlan'
     description: |
