--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -149,6 +149,7 @@ parameters:
     default: 'unset'
     description: Shared secret to prevent spoofing
     type: string
+    hidden: true
   NeutronCorePlugin:
     default: 'ml2'
     description: |
