--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -187,6 +187,7 @@ parameters:
   HeatAuthEncryptionKey:
     description: Auth encryption key for heat-engine
     type: string
+    hidden: true
   HorizonAllowedHosts:
     default: '*'
     description: A list of IP/Hostname allowed to connect to horizon
@@ -194,6 +195,7 @@ parameters:
   HorizonSecret:
     description: Secret key for Django
     type: string
+    hidden: true
   Image:
     type: string
     default: overcloud-control
@@ -301,6 +303,7 @@ parameters:
     default: 'unset'
     description: Shared secret to prevent spoofing
     type: string
+    hidden: true
   NeutronCorePlugin:
     default: 'ml2'
     description: |
@@ -414,6 +417,7 @@ parameters:
   PcsdPassword:
     type: string
     description: The password for the 'pcsd' user.
+    hidden: true
   PublicVirtualInterface:
     default: 'br-ex'
     description: >
