--- a/puppet/extraconfig/pre_deploy/controller/cinder-netapp.yaml
+++ b/puppet/extraconfig/pre_deploy/controller/cinder-netapp.yaml
@@ -18,6 +18,7 @@ parameters:
     type: string
   CinderNetappPassword:
     type: string
+    hidden: true
   CinderNetappServerHostname:
     type: string
   CinderNetappServerPort:
@@ -65,6 +66,7 @@ parameters:
   CinderNetappSaPassword:
     type: string
     default: ''
+    hidden: true
   CinderNetappStoragePools:
     type: string
     default: ''
