--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -59,6 +59,7 @@ parameters:
   RabbitPassword:
     default: 'guest'
     type: string
+    hidden: true
   RabbitUserName:
     default: 'guest'
     type: string
