--- a/environments/docker-rdo.yaml
+++ b/environments/docker-rdo.yaml
@@ -7,11 +7,12 @@ resource_registry:
 parameters:
   NovaImage: fedora-atomic
 
+# FIXME: When Kolla cuts liberty tag we can use kollaglue registry
 parameter_defaults:
   DockerComputeImage: rthallisey/centos-binary-nova-compute:liberty
-  DockerComputeDataImage: kollaglue/centos-rdo-nova-compute-data:liberty2
-  DockerLibvirtImage: kollaglue/centos-rdo-nova-libvirt:liberty2
-  DockerNeutronAgentImage: kollaglue/centos-rdo-neutron-agents:liberty2
-  DockerOpenvswitchImage: rthallisey/centos-rdo-neutron-openvswitch-agent:latest
-  DockerOvsVswitchdImage: kollaglue/centos-rdo-ovs-vswitchd:liberty2
-  DockerOpenvswitchDBImage: kollaglue/centos-rdo-ovs-db-server:liberty2
+  DockerComputeDataImage: rthallisey/centos-binary-data:liberty
+  DockerLibvirtImage: rthallisey/centos-binary-nova-libvirt:liberty
+  DockerNeutronAgentImage: rthallisey/centos-binary-neutron-agents:liberty
+  DockerOpenvswitchImage: rthallisey/centos-binary-neutron-openvswitch-agent:liberty
+  DockerOvsVswitchdImage: rthallisey/centos-binary-openvswitch-vswitchd:liberty
+  DockerOpenvswitchDBImage: rthallisey/centos-binary-openvswitch-db-server:liberty
